--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "./start.sh",
     "server": "nodemon src/server/index.js"
   },
   "dependencies": {
