--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "./start.sh",
-    "server": "nodemon src/server/index.js"
+    "start": "./start.sh"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
