--- a/package.json
+++ b/package.json
@@ -15,26 +15,25 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.4",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "events": "^3.3.0",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
     "mysql2": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.21.3",
     "style-components": "^0.1.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.10",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "nodemon": "^2.0.21",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "typescript": "^5.3.3",
     "vite": "^4.1.4"
   }
 }
